# NeuralNetwork

./: .gitignore  CMakeLists.txt
Benchmarking/: NetworkBenchmark.cpp
Logging/head/: Logger.h
Logging/src/: Logger.cpp
Network/head/: CopyNetworkImpl.h  Layer.h  NetworkBuffer.h  NeuralNetwork.h
Network/src/: Layer.cpp  NetworkBuffer.cpp  NeuralNetwork.cpp
Neuron/head/: Neuron.h
Neuron/src/: Neuron.cpp
Population/head/: Population.h
Population/src/: Population.cpp
Profiler/head/: Timer.h
Profiler/src/: Profiler.cpp  Timer.cpp
Timer/head/: Timer.h
Timer/src/: Timer.cpp
UnitTesting/: NetworkTest.cpp  NeuronTest.cpp  PopulationTest.cpp
pch/: NetworkHeader.pch
